- fixed dead space from having scrollbar-gutter reserved in html by moving space to body - fixed hamburger menu placement - made padding consistent between pages - made iframes responsive - reduced css in home page

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -5,31 +5,26 @@
 /* Main Styles */
 
 /* Base styles */
+
 html {
-    scrollbar-gutter: stable both-edges;
-    height: 100%;
-}
-
-@media (hover: hover) and (pointer: fine) {
-    html.modal-open {
-        padding-inline: 11px;
-    }
-}
-
-html.modal-open {
-    scrollbar-gutter: auto;
-    overflow: hidden;
-}
-
-
-body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: rgb(243, 244, 241);
     color: rgb(23, 23, 23);
     transition: background-color 0.5s ease;
-    min-height: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    scrollbar-gutter: stable both-edges;
+    position: relative;
+    overflow-x: hidden;
 }
 
 .boid-active {
@@ -67,8 +62,7 @@ h1 {
 
 /* Layout */
 #container {
-    /* height: 100%; */
-    box-sizing: border-box;
+    width: 100%;
     max-width: 1080px;
 }
 
@@ -90,9 +84,6 @@ h1 {
 }
 
 /* Navigation */
-nav {
-    min-width: 142px;
-}
 
 nav.nav-active {
     margin-bottom: 0px;
@@ -102,10 +93,11 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    min-width: 144px;
 }
 
 nav ul li {
-    padding: 0.75rem 0.75rem;
+    /* padding: 0.75rem 0.75rem; */
 }
 
 nav ul li a {
@@ -124,15 +116,14 @@ nav ul li a {
 
 nav ul li a.selected .nav-link-text {
     font-weight: 500;
-    /* text-indent: -1px; */
     letter-spacing: 0.01em;
 }
 
 nav ul li:first-child {
-    line-height: 0;
-    padding-inline: 0.75rem;
+    /* line-height: 0; */
+    /* padding-inline: 0.75rem;
     padding-top: 0.75rem;
-    padding-bottom: 0rem;
+    padding-bottom: 0rem; */
 }
 
 /* Hamburger menu */
@@ -140,8 +131,7 @@ nav ul li:first-child {
     font-size: 36px;
     position: absolute;
     top: 32px;
-    right: 8px;
-    padding: 0.75rem 1rem;
+    right: 16px;
     z-index: 1000;
     color: rgba(23, 23, 23);
 }
@@ -223,10 +213,10 @@ nav ul li a:hover,
 }
 
 /* Scrollbar */
-html {
+/* body {
     scrollbar-width: thin;
     scrollbar-color: #a8acb1 #e9ebed;
-}
+} */
 
 ::-webkit-scrollbar {
     width: 12px;
@@ -260,7 +250,7 @@ html {
     }
 
     nav.nav-active ul li:first-child {
-        padding-bottom: 16px !important;
+        /* padding-bottom: 16px !important; */
     }
 
     nav ul {
@@ -287,7 +277,6 @@ html {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding-inline: 0.5rem;
         min-height: 60.75px;
     }
 
@@ -296,7 +285,7 @@ html {
     }
 
     nav ul li {
-        padding: 0 0 !important;
+        /* padding: 0 0 !important; */
     }
 }
 
@@ -312,10 +301,6 @@ html {
     background-position: center;
     z-index: 2000;
     cursor: pointer;
-}
-
-html.modal-open .easter-egg {
-    right: 29px;
 }
 
 /* Mastering */
